# ml4good

./: .gitignore  README.md  main.py  pyproject.toml
day1/hyperparameters/: hyperparameters.ipynb  optimized-cifar10.ipynb
day1/snake/: README.md  pyproject.toml  snake_game.py
day1/space_invaders/: README.md  pyproject.toml  space_invaders.py
day2/debating_agents/: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
day2/debating_agents/app/: main.py  streamlit_app.py
day2/debating_agents/src/debating_agents/app/: __init__.py  streamlit_app.py
