[project]
name = "debating-agents"
version = "0.1.0"
description = "Debating Agents API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "streamlit==1.32.0",
    "requests==2.31.0",
    "openai==1.73.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debating_agents"]
